css fixes for readability

--- a/public/stylesheets/test.css
+++ b/public/stylesheets/test.css
@@ -131,6 +131,7 @@ body {
     justify-content: space-around;
     overflow: hidden;
     align-items: center;
+    margin-right: 1px;
 }
 
 .teamgoalsper {
@@ -155,12 +156,14 @@ body {
 }
 
 .weeksummarycolumn {
-    width: 05%;
+    min-width: 5%;
     /*font-size: 4vmin;*/
     font-size: clamp(16px, 4vmin, 42px);
     text-align: center;
     margin: auto;
     background-color: grey;
+    margin-left: 1px;
+    margin-right: 2px;
 }
 
 .dayofweek {
@@ -176,6 +179,7 @@ body {
     display: flex;
     justify-content: space-around;
     max-height: 60px;
+    margin-bottom: 1px;
 }
 
 .weekly_container {
@@ -231,11 +235,7 @@ body {
     background-color: rgba(0, 0, 0, 0.5);
     width: 100%;
     max-height: 50%;
-    color: white;
-    text-shadow: 1px 1px 0px black,
-        -1px 1px 0px black,
-        1px -1px 0px black,
-        -1px -1px 0px black;
+    
 }
 
 .teamimage {
@@ -262,17 +262,26 @@ body {
 
 .miniwin {
     background-color: lightgreen;
+    color: black;
 }
 
 .miniloss {
     background-color: lightcoral;
+    color: black;
 }
 
 .minitie {
     background-color: #aaaaaa;
+    color: black;
 }
 
-
+.futuregame {
+    color: white;
+    text-shadow: 1px 1px 0px black,
+        -1px 1px 0px black,
+        1px -1px 0px black,
+        -1px -1px 0px black;
+}
 
 
 
